# ai-cli

./: Cargo.toml  LICENSE  README.md  demo.tape
.github/workflows/: release.yml
src/: cli.rs  config.rs  main.rs  markdown.rs  session.rs  tools.rs
src/agent/: mod.rs  prompt.rs
src/commands/: commit.rs  history.rs  mod.rs  models.rs  record.rs  update.rs
